--- a/config/cat_0.yml
+++ b/config/cat_0.yml
@@ -3,6 +3,9 @@ dataset:
   feature_dir: "features"
   params:
 
+features:
+  - Basic
+
 av:
   split_params:
     test_size: 0.33
@@ -30,30 +33,17 @@ av:
     verbose_eval: 100
 
 model:
-  name: "lgbm"
+  name: "catboost"
   model_params:
-    objective: "regression"
-    metric: "rmse"
-    boosting_type: "gbdt"
-    max_depth: -1
-    num_leaves: 256
-    tree_learner: "serial"
-    learning_rate: 0.01
-    subsample: 0.7
-    subsample_freq: 1
-    colsample_bytree: 0.5
-    max_bin: 255
-    seed: 1213
-    bagging_seed: 1213
-    feature_fraction_seed: 1213
-    drop_seed: 1213
-    verbose: -1
-    first_metric_only: True
+    loss_function: "MultiClass"
+    eval_metric: "WKappa"
+    task_type: "CPU"
+    iterations: 6000
+    early_stopping_rounds: 500
+    random_seed: 42
 
   train_params:
-    num_boost_round: 10000
-    early_stopping_rounds: 200
-    verbose_eval: 200
+    mode: "classification"
 
 val:
   name: "group_kfold"
