--- a/config/lgb_0.yml
+++ b/config/lgb_0.yml
@@ -8,7 +8,7 @@ features:
 
 av:
   split_params:
-    test_size: 0.33
+    n_splits: 5
     random_state: 42
 
   model_params:
@@ -28,9 +28,9 @@ av:
     first_metric_only: True
 
   train_params:
-    num_boost_round: 1000
-    early_stopping_rounds: 100
-    verbose_eval: 100
+    num_boost_round: 50000
+    early_stopping_rounds: 200
+    verbose_eval: 200
 
 model:
   name: "lgbm"
@@ -62,5 +62,6 @@ val:
   name: "group_kfold"
   params:
     n_splits: 5
+    random_state: 111
 
 output_dir: "output"
