--- a/config/lgb_2.yml
+++ b/config/lgb_2.yml
@@ -29,9 +29,9 @@ av:
     first_metric_only: True
 
   train_params:
-    num_boost_round: 1000
-    early_stopping_rounds: 100
-    verbose_eval: 100
+    num_boost_round: 50000
+    early_stopping_rounds: 200
+    verbose_eval: 200
 
 model:
   name: "lgbm"
@@ -67,6 +67,7 @@ post_process:
 
 val:
   name: "group_kfold"
+  n_delete: 25
   params:
     n_splits: 5
     random_state: 111
