--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ asn1crypto==0.24.0
 attrs==19.1.0
 backcall==0.1.0
 bleach==3.1.0
-catboost==0.12.2
+catboost==0.18
 certifi>=2019.6.16
 cffi==1.11.5
 chardet==3.0.4
@@ -25,6 +25,7 @@ h5py-cache==1.0
 icc-rt==2019.0
 idna==2.7
 imageio==2.5.0
+imbalanced-learn==0.5.0
 intel-numpy==1.14.3
 intel-openmp==2019.0
 ipykernel==5.1.0
@@ -58,7 +59,7 @@ nbformat==4.4.0
 networkx==2.2
 notebook==5.7.6
 numba==0.45.1
-numpy==1.15.4
+numpy==1.16.4
 olefile==0.46
 opencv-contrib-python-headless==4.1.0.25
 pandas==0.24.2
@@ -87,7 +88,7 @@ PyWavelets==1.0.2
 pyzmq==17.1.2
 requests==2.20.1
 scikit-image==0.14.2
-scikit-learn==0.20.3
+scikit-learn==0.21.3
 scipy==1.1.0
 Send2Trash==1.5.0
 Shapely==1.6.4.post2
