--- a/config/cat_0.yml
+++ b/config/cat_0.yml
@@ -34,6 +34,7 @@ av:
 
 model:
   name: "catboost"
+  mode: "classification"
   model_params:
     loss_function: "MultiClass"
     eval_metric: "WKappa"
