add improved game

--- a/config/lgb_15_clean_features.yml
+++ b/config/lgb_15_clean_features.yml
@@ -6,7 +6,7 @@ dataset:
 features:
   - ImprovedBasic
   - ImprovedPastAssessment
-  - PastGame
+  - ImprovedPastGame
   - PastClip
   - PastActivity
 
