--- a/config/lgb_16_not_classwise.yml
+++ b/config/lgb_16_not_classwise.yml
@@ -6,7 +6,7 @@ dataset:
 features:
   - ImprovedBasic
   - ImprovedPastAssessment
-  - PastGame
+  - ImprovedPastGame
   - PastClip
   - PastActivity
 
