--- a/config/cat_9_regression_past_summary2.yml
+++ b/config/cat_9_regression_past_summary2.yml
@@ -37,6 +37,7 @@ model:
   mode: "regression"
   model_params:
     loss_function: "RMSE"
+    eval_metric: "RMSE"
     task_type: "CPU"
     iterations: 6000
     early_stopping_rounds: 100
