--- a/config/cat_9_2_multiclass_past_summary2.yml
+++ b/config/cat_9_2_multiclass_past_summary2.yml
@@ -39,6 +39,7 @@ model:
     loss_function: "MultiClass"
     task_type: "CPU"
     iterations: 6000
+    thread_count: 8
     early_stopping_rounds: 100
     random_seed: 42
 
