--- a/config/xgb_1_past_summary3.yml
+++ b/config/xgb_1_past_summary3.yml
@@ -51,13 +51,14 @@ model:
     colsample_bylevel: 0.8
     reg_alpha: 0.1
     reg_lambda: 0.1
-    verbosity: 1
+    verbosity: 0
     seed: 71
     random_state: 71
     n_jobs: -1
 
   train_params:
     early_stopping_rounds: 100
+    verbose: False
 
 post_process:
   params:
